# Marduk

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  Marduk.sln  vcpkg.json
.github/workflows/: build-release.yml
DNSManagerDll/: CMakeLists.txt  DNSManager.cpp  DNSManager.h  DNSManagerDll.vcxproj
Marduk/: CMakeLists.txt  Marduk.cpp  Marduk.vcxproj  Marduk.vcxproj.filters
Marduk/configs/: diagno_config.toml
MardukElevated/: CMakeLists.txt  MardukElevated.manifest  MardukElevated.rc  main.cpp
MardukGui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
MardukGui/pages/: DiagnosticsPage.cpp  DiagnosticsPage.h  DnsManagerPage.cpp  DnsManagerPage.h  LoginPage.cpp  LoginPage.h  WifiPortalPage.cpp  WifiPortalPage.h
MardukGui/resources/: resources.qrc
MardukGui/utils/: AsyncWorker.h  ElevationHelper.cpp  ElevationHelper.h
NetworkDiagnosticDll/: CMakeLists.txt  DiagnosticHTMLTemplates.h  HtmlTemplateManager.cpp  HtmlTemplateManager.h  NetworkDiagnostic.cpp  NetworkDiagnostic.h  NetworkDiagnosticDll.vcxproj  NetworkDiagnosticDll.vcxproj.filters  SimpleTemplateProcessor.h  ThreadPool.h
TestApp/: CMakeLists.txt  TestApp.vcxproj
WifiPortalDll/: CMakeLists.txt  WifiPortal.cpp  WifiPortal.h  WifiPortalDll.vcxproj  WifiPortalDll.vcxproj.filters  pch.h
ZfwInteractionDll/: CMakeLists.txt  ZfwInteractionDll.vcxproj  ZfwManager.cpp
cmake/toolchains/: mingw-w64-x86_64.cmake
custom-triplets/: custom-x64-windows.cmake  x64-mingw-dynamic.cmake
docker/: Dockerfile.cross
docs/: cross-build.md
scripts/: cross-build.sh
